# bible-art-maker

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bandit.yml
app/: main.py
app/db/: acf.json  nvi.json
app/helpers/: constants.py
app/models/: Bible.py  VerseRequest.py  VerseResponse.py
app/routers/v1/: art_maker_router.py  bible_router.py
